test/visibility/use-no-qualified/noUnderscoreOnlyList.good
noUnderscoreOnlyList.chpl:4: In module 'User':
noUnderscoreOnlyList.chpl:5: error: Throwaway variable '_' is not allowed in this context
